--- a/plugins/CrackShot/weapons/flamesword.yml
+++ b/plugins/CrackShot/weapons/flamesword.yml
@@ -31,6 +31,10 @@ Flamesword:
         Sounds_Shooter: GHAST_FIREBALL-1-1-0
         Sounds_Victim: GHAST_FIREBALL-1-1-0
         Sounds_Explode: GHAST_FIREBALL-1-1-0
+　　Potion_Effects:
+        Activation: hit
+        Potion_Effect_Shooter: HUNGER-60-1
+        Potion_Effect_Victim: SLOW-60-1
     Particles:
         Enable: true
         Particle_Player_Shoot: flames-10
