--- a/plugins/CrackShot/weapons/treeet.yml
+++ b/plugins/CrackShot/weapons/treeet.yml
@@ -4,9 +4,10 @@ turret:
         Item_Type: 397
         Item_Lore: "&eRocket launcher.|&eFire down at your|&efeet to rocket-jump.|&eNegates fall damage."
         Sounds_Acquired: BAT_TAKEOFF-1-1-0
+        Melee_Mode: true
     Shooting:
+    	Right_Click_To_Shoot: true
         Cancel_Left_Click_Block_Damage: true
-        Right_Click_To_Shoot: true
         Recoil_Amount: 2
         Projectile_Amount: 1
         Projectile_Type: fireball
