--- a/plugins/CrackShot/weapons/treeet.yml
+++ b/plugins/CrackShot/weapons/treeet.yml
@@ -37,3 +37,5 @@ turret:
         Explosion_No_Grief: true
         Explosion_Radius: 6
         Sounds_Shooter: SHOOT_ARROW-1-2-0
+    Explosive_Devices:
+        Enable: true
